<resources>
    <string name="app_name">Armada COVID-19</string>
    <string name="diarrea">Diarrea</string>
    <string name="flema">Flema</string>
    <string name="dificultad_respiratoria_y_fatiga">Dificultad respiratoria y fatiga</string>
    <string name="dolor_muscular">Dolor muscular</string>
    <string name="tos_seca">Tos seca</string>
    <string name="fiebre_de_38_a_39">Fiebre de 38° a 39°</string>
    <string name="que_sintomas_presenta">¿Qué síntomas presenta?</string>
    <string name="email">Email</string>
    <string name="celular_de_contacto">Celular de contacto</string>
    <string name="direccion_domiciliaria">Dirección domiciliaria</string>
    <string name="reparto">Reparto</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="nombres">Nombres</string>
    <string name="grado">Grado</string>
    <string name="tipo_paciente">Tipo paciente</string>
    <string name="cedula_de_identidad">Cédula de identidad</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="enviar_datos">Enviar Datos</string>
    <string name="ha_recibido_atenci_n_hospitalaria_en_los_ltimos_d_as_por_presunci_n_de_contagio_de_covid_19">¿Ha recibido atención hospitalaria en los últimos 14 días por presunción de contagio de COVID-19?</string>
    <string name="enfermedad_cerebrovascular">Enfermedad cerebrovascular</string>
    <string name="enfermedad_pulmonar_cronica">Enfermedad pulmonar crónica</string>
    <string name="hipertenso">Hipertenso</string>
    <string name="diabetico">Diabético</string>
    <string name="inmuno_deprimido">Inmuno deprimido</string>
    <string name="insuficiencia_renal_cronica">Insuficiencia renal crónica</string>
    <string name="cancer">Cáncer</string>
    <string name="enfermedades_catastroficas">Enfermedades catastróficas</string>
    <string name="tiene_alguna_enfermedad_catastrofica">¿Tiene alguna enfermedad catastrófica?</string>
    <string name="enfermedad_cardiovascular">Enfermedad cardiovascular</string>
    <string name="dolor_de_cabeza">Dolor de cabeza</string>
    <string name="siguiente">Siguiente</string>
    <string name="informaci_n_adicional">Información adicional</string>
    <string name="_1_a_3_d_as">1 a 3 días</string>
    <string name="_4_a_7_d_as">4 a 7 días</string>
    <string name="m_s_de_7_d_as">más de 7 días</string>
    <string name="desde_cuando_tiene_estos_s_ntomas">¿Desde cuando tiene estos síntomas?</string>
    <string name="ha_viajado_al_exterior_en_los_ltimos_14_d_as">¿Ha viajado al exterior en los últimos 14 días?</string>
    <string name="en_los_ltimos_14_d_as_ha_recibido_a_un_familiar_con_riesgo_de_covid_19">¿En los últimos 14 días, ha recibido a un familiar con riesgo de COVID-19?</string>
    <string name="en_los_ltimos_14_d_as_en_su_hogar_se_hosped_alguna_persona_de_otro_pa_s_con_riesgo_de_covid_19">¿En los últimos 14 días, en su hogar se hospedó alguna persona de otro país con riesgo de COVID-19?</string>
    <string name="en_los_ltimos_14_d_as_ha_cuidado_de_un_enfermo_con_diagn_stico_de_covid_19_positivo">¿En los últimos 14 días, ha cuidado de un enfermo con diagnóstico de COVID-19 positivo?</string>
    <string name="ha_estado_en_contacto_con_personas_expuestas_a_s_ntomas_respiratorios_infecciosos_como_tos_o_fiebre">¿Ha estado en contacto con personas expuestas a síntomas respiratorios infecciosos, como tos o fiebre?</string>
    <string name="ha_tenido_contacto_estrecho_con_alg_n_paciente_con_covid_19_confirmado">¿Ha tenido contacto estrecho con algún paciente con COVID-19 confirmado?</string>
    <string name="ha_tomado_o_est_tomando_alg_n_medicamento_o_antibi_tico_para_alg_n_proceso_respiratorio_en_los_ltimos_14_d_as">¿Ha tomado o está tomando algún medicamento o antibiótico para algún proceso respiratorio en los últimos 14 días?</string>
    <string name="se_administr_vacuna_contra_la_influenza_en_este_ltimo_a_o">¿Se administró vacuna contra la influenza en este último año?</string>
    <string name="se_administr_vacuna_antineumoc_cica_neumon_a_en_este_ltimo_a_o">¿Se administró vacuna antineumocócica (Neumonía) en este último año?</string>
    <string name="selecciona_tu_fecha_de_nacimiento">Selecciona tu fecha de nacimiento</string>
    <string name="m_s_informaci_n_sobre_el_covid_19">Más Información sobre el COVID-19</string>
    <string name="salir">Salir</string>
    <string name="armada_covid19">ARMADA COVID19</string>


    //ImagePicker
    <string name="title_choose_image_provider">Seleccione</string>
    <string name="action_cancel">Cancelar</string>
    <string name="title_gallery">Galería</string>
    <string name="title_camera">Cámara</string>

    <string name="message_gallery_permission_denied">
Se necesitan permisos de lectura de almacenamiento externo para seleccionar Imagen. Active los permisos solicitados desde Configuración > Permisos.</string>
    <string name="message_camera_permission_denied">Se necesitan permisos de cámara y almacenamiento externo para capturar imágenes. Desactivar cualquier permiso no permitirá que la aplicación se ejecute sin problemas. Active todos los permisos solicitados desde Configuración > Permisos.</string>
    <string name="permission_gallery_denied">
        <![CDATA[Se necesita permiso de almacenamiento para elegir la imagen de la galería. Permita permiso de almacenamiento desde Configuración > Permisos.]]></string>
    <string name="permission_camera_extended_denied">
        <![CDATA[
Se necesitan permisos de cámara y almacenamiento para tomar una foto. Permita ambos permisos solicitados desde Configuración > Permisos.]]></string>
    <string name="permission_camera_denied">
        <![CDATA[Se necesita permiso de almacenamiento para tomar una foto. Permita permiso de almacenamiento desde Configuración > Permisos.]]></string>

    <string name="error_failed_to_create_camera_image_file">Error al crear el archivo de imagen de la cámara</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Error al elegir la imagen de la Galería</string>
    <string name="error_failed_to_compress_image">Error al comprimir la imagen</string>
    <string name="error_task_cancelled">Tarea cancelada</string>


    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">Editar Foto</string>
    <string name="ucrop_menu_next">Siguiente</string>
    <string name="ucrop_rotate">Rotar</string>
    <string name="ucrop_scale">Escalar</string>
    <string name="ucrop_crop">Cortar</string>
    <string name="dolor_de_garganta">Dolor de garganta</string>
    <string name="malestar_general">Malestar general</string>
    <string name="p_rdida_parcial_o_total_del_olfato">Pérdida parcial o total del olfato</string>
    <string name="ciudad">Ciudad</string>
    <string name="autorizo_a_la_armada_del_ecuador_a_trav_s_de_esta_aplicaci_n_la_utilizaci_n_de_mi_informaci_n_personal_y_m_dica_para_brindar_el_servicio_de_telemedicina_permitiendo_adem_s_su_uso_para_fines_estad_sticos_sin_vulnerar_mis_derecho_de_privacidad_de_la_informaci_n">Autorizo a la Armada del Ecuador a través de esta aplicación la utilización de mi información personal y médica para brindar el servicio de telemedicina, permitiendo además su uso para fines estadísticos sin vulnerar mis derecho de privacidad de la información.</string>
    <string name="consultar_datos">Consultar Datos</string>
    <string name="c_dula_de_identidad">Cédula de identidad</string>
    <string name="seleccione_el_numero_de_dias">Seleccione el número de días</string>


</resources>
