<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.ConsultaCedulaActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <TextView
                android:id="@+id/lblAvatar"
                android:layout_width="157dp"
                android:layout_height="157dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/logotele"
                android:gravity="center" />

            <TextView
                android:id="@+id/lblTituloConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/armada_covid19"
                android:textColor="@color/blueTitle"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/lblSeparador"
                android:layout_width="200dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ic_separator"
                android:gravity="center" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCedulaConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/c_dula_de_identidad"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbxAutorizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:gravity="top"
                android:text="@string/autorizo_a_la_armada_del_ecuador_a_trav_s_de_esta_aplicaci_n_la_utilizaci_n_de_mi_informaci_n_personal_y_m_dica_para_brindar_el_servicio_de_telemedicina_permitiendo_adem_s_su_uso_para_fines_estad_sticos_sin_vulnerar_mis_derecho_de_privacidad_de_la_informaci_n"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/pgbProcesoConsulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnConsultarDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/round_bg"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/consultar_datos"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>